# private-agent-platform

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.json
.claude/agents/: requirements-analyst.md  security-design-reviewer.md  tech-feasibility-architect.md
agents/: __init__.py  base_agent.py  dev_agent.py  pending_issue_store.py
channels/: __init__.py  base.py
channels/github_webhook/: channel.py
config/: platform.yaml
config/agents/: dev.yaml
config/templates/: claude-md-cui-workflow.md  claude-md-section.md  phase-generation-prompt.md  phase-template.md
core/: __init__.py  agent_runtime.py  audit.py  channel_manager.py  config.py  constants.py  dispatch.py  errors.py  event_bus.py  logging.py  memory.py  notifier.py  phase_parser.py  plan_event_broker.py  rate_limiter.py  session_rotation.py  task_executor.py  task_planner.py  tool_registry.py
docs/: deployment.md  progress.md  requirement.md
docs/change_his/: context-aware-session-rotation.md  session-rotation-summary.md
docs/design/: context-aware-session-rotation.md
docs/phases/: phase-1a.md  phase-1b.md  phase-1c.md  phase-1d.md  phase-1e.md  phase-1f.md  phase-1g.md  phase-1h.md  phase-1i.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md
docs/poc/: cui-poc-report.md
routes/: projects.py  requirements.py  requirements_sse.py
tests/: conftest.py
tests/e2e/: test_e2e_cui_workflow.py  (+1 more)
tools/: __init__.py  base.py  claude_code_cli.py  claude_code_sdk.py  event_bus_tool.py  git_tool.py
(+235 files in other folders)
